<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Address Resolution</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="longitude_">Longitude:</string>
    <string name="latitude_">Latitude:</string>
    <string name="found_address_">Found-Address:</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="search">Search</string>

</resources>
